--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ nav li {
     text-align: center;
     margin-bottom: 2rem;
     border-radius: 5px;
-    position: relative
+    position: relative;
 }
 
 .hero h1 {
@@ -160,8 +160,8 @@ footer.cta {
 }
 
 .top-left {
-    top: 0;
-    left: 0;
+    top: 50px;
+    left: 50px;
 }
 
 .bottom-right {
