--- a/styles.css
+++ b/styles.css
@@ -153,15 +153,15 @@ footer.cta {
 
 .corner-flower {
     position: absolute;
-    width: 1000px;
+    width: 500px;
     height: auto;
     z-index: 10;
     pointer-events: none;
 }
 
 .top-left {
-    top: 150px;
-    left: 100px;
+    top: 0px;
+    left: 0px;
 }
 
 .bottom-right {
@@ -184,6 +184,10 @@ footer.cta {
         opacity: 1;
         transform: translateY(0);
     }
+}
+
+footer.cta {
+    position: relative;
 }
 
 footer.cta h2 {
